Tue Jun 23 13:38:54 GMT 2015  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h: Use appropriate typedefs
	  rather than unsigned int.  Split out of patch by Dylan Griffith in
	  #385.

Tue Jun 23 13:32:36 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_database.cc,backends/chert/chert_types.h,
	  backends/glass/glass_database.cc,backends/glass/glass_defs.h: Add
	  constants CHERT_MAX_DOCID and GLASS_MAX_DOCID for the largest docid
	  which the backends support, independent of the size of type
	  Xapian::docid.  (helps #385)

Tue Jun 23 13:19:06 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Add regression test for #678.

Tue Jun 23 13:04:06 GMT 2015  Olly Betts <olly@survex.com>

	* api/,backends/remote/net_postlist.cc,
	  backends/remote/remote-database.cc,
	  geospatial/latlong_posting_source.cc,net/,tests/unittest.cc: Split
	  decode_length() into versions which decode a 32 vs 64 bit value,
	  and which check that there's at least the decoded length in bytes
	  in the source data.  (Fixes #678 and helps #385)

Tue Jun 23 11:49:15 GMT 2015  Olly Betts <olly@survex.com>

	* net/remoteserver.cc: Check length of key in MSG_SETMETADATA.

Sat Jun 20 13:05:50 GMT 2015  Olly Betts <olly@survex.com>

	* common/str.h,tests/,tests/harness/,tests/internaltest.cc,
	  tests/perftest/perftest.cc,tests/perftest/perftest_matchdecider.cc,
	  tests/perftest/perftest_randomidx.cc,tests/queryparsertest.cc,
	  tests/soaktest/soaktest_queries.cc,tests/termgentest.cc,
	  tests/unittest.cc: Make str() private to the library, and use
	  C++11 std::to_string() to convert numbers to std::string in the
	  testsuite.  (ticket #63)

Sat Jun 20 12:32:13 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_unicode.cc: Fix trailing whitespace introduced by previous
	  commit.

Sat Jun 20 06:31:27 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_unicode.cc,unicode/Makefile.mk,
	  unicode/UnicodeData-README.txt,unicode/UnicodeData.txt: