@@ -1,7 +1,7 @@
 /* testutils.cc: Xapian-specific test helper functions.
  *
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2003,2004,2007,2008,2009 Olly Betts
+ * Copyright 2003,2004,2007,2008,2009,2015 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -31,10 +31,10 @@
 using namespace std;
 
 ostream &
-operator<<(ostream &os, const vector<unsigned int> &ints)
+operator<<(ostream &os, const vector<Xapian::docid> &ints)
 {
     copy(ints.begin(), ints.end(),
-	 ostream_iterator<unsigned int>(os, ", "));
+	 ostream_iterator<Xapian::docid>(os, ", "));
     return os;
 }
 
